--- a/src/components/sections/SkillSlider.astro
+++ b/src/components/sections/SkillSlider.astro
@@ -39,256 +39,255 @@ import Node from "@/icons/Node.astro";
 ---
 
 <Section>
-  <h2 class="section-title flex items-center gap-1">
-    <Briefcase /> Habilidades
-  </h2>
-
-  <article class="suscribe-container">
-    <p>
+  <div class="area_section-2">
+    <h2 class="section-title flex items-center gap-1">
+      <Briefcase /> Habilidades
+    </h2>
+    <p class="parrafo">
       Tengo la inquietante necesidad de construir cosas. A veces el trabajo
       fluye con facilidad, otras veces me cuestiono mis decisiones. E pluribus
       unum.
     </p>
-  </article>
-
-  <div class="stock-ticker shadow-[inset_-12px_-8px_40px_#46464620]">
-    <ul>
-      <li class="minus">
-        <Html5 class="w-4 h-4" />
-        <span class="company">HTML</span>
-      </li>
-      <li class="minus">
-        <Css3 class="w-4 h-4" />
-        <span class="company">CSS</span>
-      </li>
-      <li class="minus">
-        <Javascript class="w-4 h-4" />
-        <span class="company">Javascript</span>
-      </li>
-      <li class="minus">
-        <Python class="w-4 h-4" />
-        <span class="company">Python</span>
-      </li>
-      <li class="minus">
-        <React class="w-4 h-4" />
-        <span class="company">React</span>
-      </li>
-      <li class="minus">
-        <Astrojs class="w-4 h-4" />
-        <span class="company">Astro</span>
-      </li>
-      <li class="minus">
-        <Nextdotjs class="w-4 h-4" />
-        <span class="company">Next.js</span>
-      </li>
-      <li class="minus">
-        <Nodedotjs class="w-4 h-4" />
-        <span class="company">Node.js</span>
-      </li>
-      <li class="minus">
-        <Tailwindcss class="w-4 h-4" />
-        <span class="company">Tailwind</span>
-      </li>
-      <li class="minus">
-        <Typescript class="w-4 h-4" />
-        <span class="company">Typescript</span>
-      </li>
-      <li class="minus">
-        <Mysql class="w-4 h-4" />
-        <span class="company">MySql</span>
-      </li>
-      <li class="minus">
-        <Git class="w-4 h-4" />
-        <span class="company">Git</span>
-      </li>
-      <li class="minus">
-        <Github class="w-4 h-4" />
-        <span class="company">Github</span>
-      </li>
-      <li class="minus">
-        <Bootstrap class="w-4 h-4" />
-        <span class="company">Bootstrap</span>
-      </li>
-      <li class="minus">
-        <Vite class="w-4 h-4" />
-        <span class="company">Vite</span>
-      </li>
-      <li class="minus">
-        <Slack class="w-4 h-4" />
-        <span class="company">Slack</span>
-      </li>
-
-      <li class="plus">
-        <Figma class="w-4 h-4" />
-        <span class="company">Figma</span>
-      </li>
-      <li class="plus">
-        <Notion class="w-4 h-4" />
-        <span class="company">Notion</span>
-      </li>
-      <li class="plus">
-        <Hubspot class="w-4 h-4" />
-        <span class="company">Hubspot</span>
-      </li>
-      <li class="plus">
-        <Gumroad class="w-4 h-4" />
-        <span class="company">Gumroad</span>
-      </li>
-      <li class="plus">
-        <Googleads class="w-4 h-4" />
-        <span class="company">Google Ads</span>
-      </li>
-      <li class="plus">
-        <Googleanalytics class="w-4 h-4" />
-        <span class="company">Analytics</span>
-      </li>
-      <li class="plus">
-        <Meta class="w-4 h-4" />
-        <span class="company">Meta</span>
-      </li>
-      <li class="plus">
-        <Googlegemini class="w-4 h-4" />
-        <span class="company">Gemini</span>
-      </li>
-      <li class="plus">
-        <Openai class="w-4 h-4" />
-        <span class="company">ChatGPT</span>
-      </li>
-      <li class="plus">
-        <Blogger class="w-4 h-4" />
-        <span class="company">Blogger</span>
-      </li>
-    </ul>
-
-    <ul aria-hidden="true">
-      <li class="minus">
-        <Html5 class="w-4 h-4" />
-        <span class="company">HTML</span>
-      </li>
-      <li class="minus">
-        <Css3 class="w-4 h-4" />
-        <span class="company">CSS</span>
-      </li>
-      <li class="minus">
-        <Javascript class="w-4 h-4" />
-        <span class="company">Javascript</span>
-      </li>
-      <li class="minus">
-        <Python class="w-4 h-4" />
-        <span class="company">Python</span>
-      </li>
-      <li class="minus">
-        <React class="w-4 h-4" />
-        <span class="company">React</span>
-      </li>
-      <li class="minus">
-        <Astrojs class="w-4 h-4" />
-        <span class="company">Astro</span>
-      </li>
-      <li class="minus">
-        <Nextdotjs class="w-4 h-4" />
-        <span class="company">Next.js</span>
-      </li>
-      <li class="minus">
-        <Nodedotjs class="w-4 h-4" />
-        <span class="company">Node.js</span>
-      </li>
-      <li class="minus">
-        <Tailwindcss class="w-4 h-4" />
-        <span class="company">Tailwind</span>
-      </li>
-      <li class="minus">
-        <Typescript class="w-4 h-4" />
-        <span class="company">Typescript</span>
-      </li>
-      <li class="minus">
-        <Mysql class="w-4 h-4" />
-        <span class="company">MySql</span>
-      </li>
-      <li class="minus">
-        <Git class="w-4 h-4" />
-        <span class="company">Git</span>
-      </li>
-      <li class="minus">
-        <Github class="w-4 h-4" />
-        <span class="company">Github</span>
-      </li>
-      <li class="minus">
-        <Bootstrap class="w-4 h-4" />
-        <span class="company">Bootstrap</span>
-      </li>
-      <li class="minus">
-        <Vite class="w-4 h-4" />
-        <span class="company">Vite</span>
-      </li>
-      <li class="minus">
-        <Slack class="w-4 h-4" />
-        <span class="company">Slack</span>
-      </li>
-      <li class="plus">
-        <Figma class="w-4 h-4" />
-        <span class="company">Figma</span>
-      </li>
-      <li class="plus">
-        <Notion class="w-4 h-4" />
-        <span class="company">Notion</span>
-      </li>
-      <li class="plus">
-        <Hubspot class="w-4 h-4" />
-        <span class="company">Hubspot</span>
-      </li>
-      <li class="plus">
-        <Gumroad class="w-4 h-4" />
-        <span class="company">Gumroad</span>
-      </li>
-      <li class="plus">
-        <Googleads class="w-4 h-4" />
-        <span class="company">Google Ads</span>
-      </li>
-      <li class="plus">
-        <Googleanalytics class="w-4 h-4" />
-        <span class="company">Analytics</span>
-      </li>
-      <li class="plus">
-        <Meta class="w-4 h-4" />
-        <span class="company">Meta</span>
-      </li>
-      <li class="plus">
-        <Googlegemini class="w-4 h-4" />
-        <span class="company">Gemini</span>
-      </li>
-      <li class="plus">
-        <Openai class="w-4 h-4" />
-        <span class="company">ChatGPT</span>
-      </li>
-      <li class="plus">
-        <Blogger class="w-4 h-4" />
-        <span class="company">Blogger</span>
-      </li>
-    </ul>
+    
+    <div class="stock-ticker ">
+      <ul>
+        <li class="minus">
+          <Html5 class="w-4 h-4" />
+          <span class="company">HTML</span>
+        </li>
+        <li class="minus">
+          <Css3 class="w-4 h-4" />
+          <span class="company">CSS</span>
+        </li>
+        <li class="minus">
+          <Javascript class="w-4 h-4" />
+          <span class="company">Javascript</span>
+        </li>
+        <li class="minus">
+          <Python class="w-4 h-4" />
+          <span class="company">Python</span>
+        </li>
+        <li class="minus">
+          <React class="w-4 h-4" />
+          <span class="company">React</span>
+        </li>
+        <li class="minus">
+          <Astrojs class="w-4 h-4" />
+          <span class="company">Astro</span>
+        </li>
+        <li class="minus">
+          <Nextdotjs class="w-4 h-4" />
+          <span class="company">Next.js</span>
+        </li>
+        <li class="minus">
+          <Nodedotjs class="w-4 h-4" />
+          <span class="company">Node.js</span>
+        </li>
+        <li class="minus">
+          <Tailwindcss class="w-4 h-4" />
+          <span class="company">Tailwind</span>
+        </li>
+        <li class="minus">
+          <Typescript class="w-4 h-4" />
+          <span class="company">Typescript</span>
+        </li>
+        <li class="minus">
+          <Mysql class="w-4 h-4" />
+          <span class="company">MySql</span>
+        </li>
+        <li class="minus">
+          <Git class="w-4 h-4" />
+          <span class="company">Git</span>
+        </li>
+        <li class="minus">
+          <Github class="w-4 h-4" />
+          <span class="company">Github</span>
+        </li>
+        <li class="minus">
+          <Bootstrap class="w-4 h-4" />
+          <span class="company">Bootstrap</span>
+        </li>
+        <li class="minus">
+          <Vite class="w-4 h-4" />
+          <span class="company">Vite</span>
+        </li>
+        <li class="minus">
+          <Slack class="w-4 h-4" />
+          <span class="company">Slack</span>
+        </li>
+        <li class="plus">
+          <Figma class="w-4 h-4" />
+          <span class="company">Figma</span>
+        </li>
+        <li class="plus">
+          <Notion class="w-4 h-4" />
+          <span class="company">Notion</span>
+        </li>
+        <li class="plus">
+          <Hubspot class="w-4 h-4" />
+          <span class="company">Hubspot</span>
+        </li>
+        <li class="plus">
+          <Gumroad class="w-4 h-4" />
+          <span class="company">Gumroad</span>
+        </li>
+        <li class="plus">
+          <Googleads class="w-4 h-4" />
+          <span class="company">Google Ads</span>
+        </li>
+        <li class="plus">
+          <Googleanalytics class="w-4 h-4" />
+          <span class="company">Analytics</span>
+        </li>
+        <li class="plus">
+          <Meta class="w-4 h-4" />
+          <span class="company">Meta</span>
+        </li>
+        <li class="plus">
+          <Googlegemini class="w-4 h-4" />
+          <span class="company">Gemini</span>
+        </li>
+        <li class="plus">
+          <Openai class="w-4 h-4" />
+          <span class="company">ChatGPT</span>
+        </li>
+        <li class="plus">
+          <Blogger class="w-4 h-4" />
+          <span class="company">Blogger</span>
+        </li>
+      </ul>
+      <ul aria-hidden="true">
+        <li class="minus">
+          <Html5 class="w-4 h-4" />
+          <span class="company">HTML</span>
+        </li>
+        <li class="minus">
+          <Css3 class="w-4 h-4" />
+          <span class="company">CSS</span>
+        </li>
+        <li class="minus">
+          <Javascript class="w-4 h-4" />
+          <span class="company">Javascript</span>
+        </li>
+        <li class="minus">
+          <Python class="w-4 h-4" />
+          <span class="company">Python</span>
+        </li>
+        <li class="minus">
+          <React class="w-4 h-4" />
+          <span class="company">React</span>
+        </li>
+        <li class="minus">
+          <Astrojs class="w-4 h-4" />
+          <span class="company">Astro</span>
+        </li>
+        <li class="minus">
+          <Nextdotjs class="w-4 h-4" />
+          <span class="company">Next.js</span>
+        </li>
+        <li class="minus">
+          <Nodedotjs class="w-4 h-4" />
+          <span class="company">Node.js</span>
+        </li>
+        <li class="minus">
+          <Tailwindcss class="w-4 h-4" />
+          <span class="company">Tailwind</span>
+        </li>
+        <li class="minus">
+          <Typescript class="w-4 h-4" />
+          <span class="company">Typescript</span>
+        </li>
+        <li class="minus">
+          <Mysql class="w-4 h-4" />
+          <span class="company">MySql</span>
+        </li>
+        <li class="minus">
+          <Git class="w-4 h-4" />
+          <span class="company">Git</span>
+        </li>
+        <li class="minus">
+          <Github class="w-4 h-4" />
+          <span class="company">Github</span>
+        </li>
+        <li class="minus">
+          <Bootstrap class="w-4 h-4" />
+          <span class="company">Bootstrap</span>
+        </li>
+        <li class="minus">
+          <Vite class="w-4 h-4" />
+          <span class="company">Vite</span>
+        </li>
+        <li class="minus">
+          <Slack class="w-4 h-4" />
+          <span class="company">Slack</span>
+        </li>
+        <li class="plus">
+          <Figma class="w-4 h-4" />
+          <span class="company">Figma</span>
+        </li>
+        <li class="plus">
+          <Notion class="w-4 h-4" />
+          <span class="company">Notion</span>
+        </li>
+        <li class="plus">
+          <Hubspot class="w-4 h-4" />
+          <span class="company">Hubspot</span>
+        </li>
+        <li class="plus">
+          <Gumroad class="w-4 h-4" />
+          <span class="company">Gumroad</span>
+        </li>
+        <li class="plus">
+          <Googleads class="w-4 h-4" />
+          <span class="company">Google Ads</span>
+        </li>
+        <li class="plus">
+          <Googleanalytics class="w-4 h-4" />
+          <span class="company">Analytics</span>
+        </li>
+        <li class="plus">
+          <Meta class="w-4 h-4" />
+          <span class="company">Meta</span>
+        </li>
+        <li class="plus">
+          <Googlegemini class="w-4 h-4" />
+          <span class="company">Gemini</span>
+        </li>
+        <li class="plus">
+          <Openai class="w-4 h-4" />
+          <span class="company">ChatGPT</span>
+        </li>
+        <li class="plus">
+          <Blogger class="w-4 h-4" />
+          <span class="company">Blogger</span>
+        </li>
+      </ul>
+    </div>
   </div>
 </Section>
 
 <style>
+  .parrafo {
+    color: rgb(var(--dark), 0.65);
+  }
   .stock-ticker {
     font-family: var(--heading-font);
-    color: rgb(var(--dark), 0.65);
-    font-size: 12px;
+    color: rgb(var(--light), 0.95);
+    font-size: 14px;
     text-transform: uppercase;
-    padding-block: 8px;
-    border-block: 1px solid rgb(var(--dark), 0.1);
+    padding-block: 20px;
     overflow: hidden;
-    user-select: none;
-    mask-image: linear-gradient(
-      to right,
-      transparent,
-      #000 10% 90%,
-      transparent
-    );
-
+    user-select: none;    
     --gap: 20px;
     display: flex;
     gap: var(--gap);
+    
+    mask-image: linear-gradient(
+      to right,
+      transparent,
+      #fffefe 10% 90%,
+      transparent
+    );
   }
 
   .stock-ticker ul {
@@ -300,7 +299,7 @@ import Node from "@/icons/Node.astro";
     align-items: center;
     gap: var(--gap);
 
-    animation: scroll 20s linear infinite;
+    animation: scroll 30s linear infinite;
   }
 
   .stock-ticker:hover ul {
@@ -316,8 +315,12 @@ import Node from "@/icons/Node.astro";
     display: flex;
     items-align: center;
     justify-content: center;
-    gap: 4px;
-    padding: 4px;
+    gap: 8px;
+    padding: 8px 16px;
+    border: 3px solid rgb(var(--accent-65), 0.55);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgb(var(--dark), 0.25);
+    /* background-color: rgb(var(--accent-50), 0.15); */
   }
 
   .stock-ticker ul:first-child {
@@ -347,11 +350,11 @@ import Node from "@/icons/Node.astro";
 
   .stock-ticker .plus,
   .stock-ticker .plus::before {
-    color: rgb(var(--bg-200));
+    color: rgb(var(--accent-55));
   }
 
   .stock-ticker .minus,
   .stock-ticker .minus::before {
-    color: rgb(var(--accent-100));
+    color: rgb(var(--accent-65));
   }
 </style>
