--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,15 +1,13 @@
 ---
 import Section from "../Section.astro";
-
 import { basics } from "@landing";
 const { name, label, image, location, profiles, phone, email } = basics;
 const { city, region } = location;
-
 import { Github, Linkedin, X, Instagram, Threads } from "simple-icons-astro";
 import WorldMap from "@/icons/WorldMap.astro";
 import Mail from "@/icons/Mail.astro";
 import Phone from "@/icons/Phone.astro";
-
+import UserPin from "@/icons/User-pin.astro";
 const SOCIAL_ICONS: Record<string, any> = {
   Github,
   Linkedin,
@@ -17,7 +15,6 @@ const SOCIAL_ICONS: Record<string, any> = {
   Instagram,
   Threads,
 };
-
 const linkedInfo = profiles.find(({ network }) => network === "Linkedin");
 const linkedUrl = linkedInfo?.url;
 const XInfo = profiles.find(({ network }) => network === "X");
@@ -43,19 +40,21 @@ const printInfo = [
 ---
 
 <Section>
-  <article
-    class="hero-section max-w-[700px] flex flex-row items-center justify-between mx-auto my-0"
-  >
-    <div class="hero-info flex flex-col gap-4">
-      <h1 class="text-4xl font-black tracking-tighter text-pretty">
-        Hola! Soy <span class="text-title-hero">Edinson Rivera</span>.
+  <article class="hero-section flex items-center mx-auto mb-0 mt-4 gap-6">
+    <figure class="hero-image flex flex-col items-center justify-center">
+      <img src={image} alt={name} />
+    </figure>
+
+    <div class="hero-info flex flex-col gap-2">
+      <h1 class="title">
+        {name}
       </h1>
 
-      <h2 class="text-base font-light text-balance">
+      <h2 class="subtitle">
         {label}
       </h2>
 
-      <span class="flex items-center gap-1 text-sm">
+      <span class="ubicacion flex items-center gap-2">
         <WorldMap />
         {city}, {region}
       </span>
@@ -108,96 +107,81 @@ const printInfo = [
             );
           })
         }
+        {
+          (
+            <a
+              href="/resume"
+              title={`Ver currículum de ${name}`}
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <UserPin />
+            </a>
+          )
+        }
       </footer>
     </div>
-
-    <figure class="hero-image">
-      <img src={image} alt={name} />
-    </figure>
   </article>
 </Section>
 
 <style>
-  .hero-info h1,
-  .hero-info h2 {
-    color: rgb(var(--text-100));
+  .hero-section {
+    font-family: var(--heading-font);
+    color: rgb(var(--dark), 1);
+    max-width: 700px;
   }
-  .hero-info .text-title-hero {
-    text-shadow: 0px 0px 16px rgb(var(--text-200), 0.25);
-    background: rgb(var(--text-200));
-    background: linear-gradient(
-      to left,
-      rgb(var(--text-200), 0.98) 0%,
-      rgb(var(--text-200), 0.55) 50%,
-      rgb(var(--text-200), 0.98) 100%
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  .hero-info span {
-    color: rgb(var(--text-200), 0.4);
-  }
-
-  .hero-image img {
+  .hero-image {
     aspect-ratio: 1 / 1;
     object-fit: cover;
-    width: 330px;
+    width: 140px;
   }
-
+  .title {
+    font-size: clamp(24px, 2.5vw, 40px);
+    font-weight: 800;
+    letter-spacing: -0.025em;
+    list-style: 0.85;
+  }
+  .subtitle {
+    font-weight: 300;
+    font-size: clamp(16px, 1.5vw, 18px);
+    letter-spacing: 0.025em;
+    text-wrap: balance;
+  }
+  .ubicacion {
+    color: rgb(var(--dark), 0.55);
+    font-weight: 300;
+    font-size: 12px;
+  }
   footer {
     display: flex;
     gap: 0.5rem;
-    font-size: 0.625rem;
+    font-size: 10px;
   }
-
   footer a {
-    color: rgb(var(--dark), 0.5);
+    color: rgb(var(--dark), 0.8);
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid rgb(var(--text-200), 0.1);
-    border-radius: 0.375rem;
-    padding: 0.25rem;
-    height: 32px;
-    width: 32px;
-
+    border: 1px solid rgb(var(--dark), 0.1);
+    border-radius: 6px;
+    padding: 4px;
+    height: 2rem;
+    width: 2rem;
     transition: all 0.2s ease;
   }
-
   footer a:hover {
-    background-color: rgb(var(--text-200), 0.05);
-    border: 1px solid rgb(var(--text-200), 0.05);
-    color: rgb(var(--text-200), 1);
+    background-color: rgb(var(--accent-50), 0.05);
+    border: 1px solid rgb(var(--accent-50), 0.08);
+    color: rgb(var(--accent-50));
   }
 
   @media (width <= 700px) {
     .hero-section {
-      flex-direction: column-reverse;
+      flex-direction: column;
     }
-
     .hero-info {
-      justify-content: center;
-      align-items: center;
       text-align: center;
-    }
-
-    .hero-info h1 {
-      font-size: 32px;
-    }
-
-    .hero-info h2 {
-      text-wrap: balance;
-    }
-
-    .hero-image {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0 auto;
-    }
-
-    .hero-image img {
-      width: 100%;
+      place-items: center;
     }
   }
 </style>
