--- a/src/components/sections/NavbarMin.astro
+++ b/src/components/sections/NavbarMin.astro
@@ -6,21 +6,23 @@ import { Github, X, Instagram, Threads, Linkedin } from "simple-icons-astro";
 ---
 
 <Section>
-  <header class="" transition:animate="slide">
+  <header class="header" transition:animate="slide">
     <div
-      class="container mx-auto pt-4 flex items-center flex-row justify-between "
+      class="container flex items-center justify-between py-4 md:flex-row flex-col mx-auto"
     >
-      <h2
-        class="flex title-font font-medium items-center mb-0 md:mb-0 text-[rgba(var(--text-100),.85)] hover:text-[rgba(var(--text-200),.90)] hover:drop-shadow-lg"
-      >
-        <Logo />
-        <span class="ml-1 text-2xl font-bold tracking-tighter">Edinson.</span>
-      </h2>
+      <a href="/" class="logo">
+        <h2 class="flex items-center gap-1 mb-4 md:mb-0 tracking-tighter">
+          <Logo />
+          <span class="text-2xl font-bold"
+            >edirju<span class="text-[#00D8FF]">dev</span>.</span
+          >
+        </h2>
+      </a>
 
       <div
-        class="social-links inline-flex items-center gap-2 border-0  focus:outline-none mt-0 md:mt-0"
+        class="social-links inline-flex items-center gap-2 border-0 focus:outline-none mt-0 md:mt-0"
       >
-        <a
+        <!-- <a
           href="https://www.linkedin.com/in/edinson-rivera-jurado/"
           target="_blank"
           class="text-[rgba(var(--text-100),.8)] hover:text-[rgba(var(--text-200),.8)] hover:drop-shadow-lg"
@@ -37,14 +39,14 @@ import { Github, X, Instagram, Threads, Linkedin } from "simple-icons-astro";
         >
           <span class="sr-only">Go to Edinson's GitHub repo</span>
           <Github />
-        </a>
-        <a
+        </a> -->
+        <!-- <a
           class="inline-flex items-center gap-1 bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 hover:text-[rgba(var(--text-200),1)] rounded text-sm md:mt-0 hover:underline-offset-4 hover:underline"
           href="/"
         >
           Volver
           <Home class="w-4 h-4" />
-        </a>
+        </a> -->
       </div>
     </div>
   </header>
