--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,22 +3,20 @@ import Layout from "@/layouts/Layout.astro";
 import Navbar from "@/components/sections/Navbar.astro";
 import Hero from "@/components/sections/Hero.astro";
 import About from "@/components/sections/About.astro";
-import Skills from "@/components/sections/Skills.astro";
+import Services from "@/components/sections/Services.astro";
 import SkillSlider from "@/components/sections/SkillSlider.astro";
 import BlogPost from "@/components/sections/BlogPost.astro";
 import PostMedia from "@/components/sections/PostMedia.astro";
 import Projects from "@/components/sections/Projects.astro";
 import Footer from "@/components/sections/Footer.astro";
-
 import { basics } from "@landing";
 const { name, label } = basics;
 ---
-
 <Layout title={`Portafolio de ${name} - ${label}`}>  
   <Navbar />
   <Hero />  
   <About />
-  <!-- <Skills /> -->
+  <Services />  
   <SkillSlider />  
   <Projects />
   <BlogPost />
